Create separate sub-repos for each project
-Working API and compilation w/ Unity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ cmake_minimum_required(VERSION ${VERSION})
 
 project(RobotCode CXX)
 
-# Add sub projects
-add_subdirectory("src/robot")
-add_subdirectory("src/shared_robot_interface")
-add_subdirectory("src/simulator")
+# Add sub projects (order here matters!)
+add_subdirectory("shared_api")
+add_subdirectory("robot_api")
+add_subdirectory("simulator_api")
+add_subdirectory("robot")
