WORKING ARM COMPILER W/ PROS!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ set(DCMAKE_SH="CMAKE_SH-NOTFOUND")
 
 cmake_minimum_required(VERSION ${VERSION})
 
+if(${CMAKE_PROFILE} MATCHES "RobotCompile")
+    include(toolchain.cmake)
+endif()
+
 project(RobotCode CXX C)
 
 set(CMAKE_C_STANDARD 11)
@@ -14,11 +18,11 @@ if(MSVC)
     add_compile_options(/W4 /WX /W2 /wd4514 /Od /ZI /Zi)
     MESSAGE("USING MSVC; Using Cmake Profile: ${CMAKE_PROFILE}")
 else()
-    add_compile_options(-Wall -Wextra -pedantic -Werror)
+    add_compile_options(-pedantic -Werror -ffunction-sections -fdata-sections -fdiagnostics-color -funwind-tables)
     MESSAGE("USING GCC; Using Cmake Profile: ${CMAKE_PROFILE}")
 endif()
 
-# Add sub projects (order here matters!)
+# Add sub projects
 add_subdirectory("shared_api")
 add_subdirectory("simulator_api")
 add_subdirectory("robot_api")
