--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 # https://docs.microsoft.com/en-us/cpp/build/reference/compiler-option-warning-level?view=vs-2019
 if (MSVC)
-    add_compile_options(/W4 /WX /W2 /wd4514 /Od /ZI /Zi)
+    # https://stackoverflow.com/questions/31639611/c-callstack-on-windows-access-violation /EHa tells compiler to handle SEH exceptions as standard try/catch
+    add_compile_options(/W4 /W2 /wd4514 /Od /ZI /Zi)
     MESSAGE("USING MSVC; Using Cmake Profile: ${CMAKE_PROFILE}")
 else ()
     add_compile_options(-pedantic -Werror -ffunction-sections -fdata-sections -fdiagnostics-color -funwind-tables)
@@ -37,5 +38,4 @@ else ()
 endif ()
 # Robot can be built with either since its an abstract API
 add_subdirectory("robot")
-
 
